[gd_scene load_steps=13 format=3 uid="uid://1uca6qityn6s"]

[ext_resource type="Script" path="res://Counter.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c4182i5lpcyoi" path="res://img/numbers/0.png" id="2"]
[ext_resource type="Texture2D" uid="uid://b4ukst5hrv3bx" path="res://img/numbers/1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bsgnh1m1irvgv" path="res://img/numbers/2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bn4w4jqssycw8" path="res://img/numbers/3.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bkrtyv5ag84pp" path="res://img/numbers/4.png" id="6"]
[ext_resource type="Texture2D" uid="uid://ceixokdfw56x8" path="res://img/numbers/5.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bmvrtp7amdnx2" path="res://img/numbers/6.png" id="8"]
[ext_resource type="Texture2D" uid="uid://ckpda3nl3sgvo" path="res://img/numbers/7.png" id="9"]
[ext_resource type="Texture2D" uid="uid://thyw2ts38ew2" path="res://img/numbers/8.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bnb3l7nhvnj1t" path="res://img/numbers/9.png" id="11"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Counter" type="Node2D"]
script = ExtResource("1")

[node name="SingleDigit" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("1")

[node name="FirstDigit" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-56, 0)
sprite_frames = SubResource("1")

[node name="SecondDigit" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(58, 0)
sprite_frames = SubResource("1")
